# neuromorphic-data-gathering

./: Readme.md
ABB-setup/dv-processing-rel_1.7/: .cmake-format  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CODING_GUIDELINES.md  ChangeLog  README.md  pyproject.toml
ABB-setup/dv-processing-rel_1.7/benchmarks/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/benchmarks/accumulation/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/benchmarks/containers/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/benchmarks/core/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/benchmarks/depth/: CMakeLists.txt  disparity.cpp  sparse-block-matcher.cpp
ABB-setup/dv-processing-rel_1.7/cmake/: dv-processing.pc.in
ABB-setup/dv-processing-rel_1.7/docs/: .gitignore  Doxyfile  docs-build.py  requirements.txt
ABB-setup/dv-processing-rel_1.7/docs/design/: README.md  filters.puclass  tracker.puclass
ABB-setup/dv-processing-rel_1.7/docs/source/: cli-utilities.md  contrast_maximization.md  depth_estimation.md  event_filtering.md  event_store.md  event_stream_slicing.md  feature_detection.md  kinematics.md  mean_shift_clustering.md  network_streaming.md  usage.md  writing_data.md
ABB-setup/dv-processing-rel_1.7/include/dv-processing/: version.hpp  version.hpp.in
ABB-setup/dv-processing-rel_1.7/packaging/fedora-source-package/: packageFedora.sh
ABB-setup/dv-processing-rel_1.7/packaging/linux/: arch-release.sh  brew-release.sh  build_libcaer.sh  dv-processing-brew.rb  gentoo-release.sh
ABB-setup/dv-processing-rel_1.7/packaging/ubuntu-source-package/: packageUbuntu.sh
ABB-setup/dv-processing-rel_1.7/packaging/windows/: run-bat.py  setup-msvc-vcpkg-x86.bat
ABB-setup/dv-processing-rel_1.7/python/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/python/samples/: camera_capture.py  filter_chain.py  sample_usage.ipynb  writer_stereo_dvs.py
ABB-setup/dv-processing-rel_1.7/python/tests/: test_calibration.py  test_event_blob_detector.py
ABB-setup/dv-processing-rel_1.7/samples/depth/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/samples/features/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/samples/motion-compensation/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/samples/noise/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/tests/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/tests/camera/: calibration-set.cpp  stereo-geometry.cpp
ABB-setup/dv-processing-rel_1.7/tests/cluster/: mean_shift.cpp
ABB-setup/dv-processing-rel_1.7/tests/core/: accumulator.cpp  event-filters.cpp  event-slicer.cpp  event-utilities.cpp  multi-stream-slicer.cpp  pixel-accumulator.cpp  stereo-event-slicer.cpp  time-surface.cpp  utils.cpp
ABB-setup/dv-processing-rel_1.7/tests/data/: depth-frame.cpp  generate.cpp
ABB-setup/dv-processing-rel_1.7/tests/depth/: CMakeLists.txt  sparse-event-block-matcher.cpp
ABB-setup/dv-processing-rel_1.7/tests/features/: CMakeLists.txt  event-combined-tracker.cpp  event-feature-tracker.cpp  image-feature-detector.cpp  keypoint-resampler.cpp
ABB-setup/dv-processing-rel_1.7/tests/imgproc/: CMakeLists.txt  imgproc.cpp
ABB-setup/dv-processing-rel_1.7/tests/imu/: CMakeLists.txt
ABB-setup/dv-processing-rel_1.7/tests/io/: CMakeLists.txt  io-stream.cpp  mono-camera-writer.cpp  network-reader.cpp  network-writer.cpp  read-file.cpp  write-file.cpp
ABB-setup/dv-processing-rel_1.7/tests/kinematics/: CMakeLists.txt  linear-transformer.cpp
ABB-setup/dv-processing-rel_1.7/tests/noise/: CMakeLists.txt  noise-filter.cpp
ABB-setup/dv-processing-rel_1.7/tests/optimization/: CMakeLists.txt  contrast-maximization.cpp
ABB-setup/dv-processing-rel_1.7/tests/utilities/: CsvEventReader.hpp  EventDatasetReader.hpp  EventReadWrite.hpp  import_data.py
ABB-setup/dv-processing-rel_1.7/tests/visualization/: event-visualizer.cpp
ABB-setup/dv-processing-rel_1.7/utilities/list-devices/: list-devices.cpp
experiments/NeuroTac/: .env
source_code/dv-processing-rel_1.7/: CMakeLists.txt
source_code/dv-processing-rel_1.7/benchmarks/accumulation/: accumulation.cpp
source_code/dv-processing-rel_1.7/benchmarks/cluster/: mean-shift-alternatives.hpp  mean_shift.cpp
source_code/dv-processing-rel_1.7/benchmarks/core/: event_store.cpp
source_code/dv-processing-rel_1.7/benchmarks/noise/: CMakeLists.txt  noise-filtering.cpp
source_code/dv-processing-rel_1.7/docs/design/: general-classes.puclass
source_code/dv-processing-rel_1.7/docs/source/: accumulators.md  conf.py  feature_tracking.md  installation.md  motion_compensation.md
source_code/dv-processing-rel_1.7/include/: CMakeLists.txt
source_code/dv-processing-rel_1.7/include/dv-processing/: CMakeLists.txt
source_code/dv-processing-rel_1.7/packaging/fedora-source-package/: dv-processing.spec
source_code/dv-processing-rel_1.7/packaging/linux/: dv-processing-arch.pkgbuild
source_code/dv-processing-rel_1.7/python/samples/: accumulator.py  export_aedat4_to_csv.py  writer_mono_dvs.py
source_code/dv-processing-rel_1.7/python/tests/: run_all_tests.py  test_depth_events.py  test_event_store.py  test_io.py  test_stereo_disparity.py
source_code/dv-processing-rel_1.7/samples/: CMakeLists.txt
source_code/dv-processing-rel_1.7/samples/clustering/: CMakeLists.txt
source_code/dv-processing-rel_1.7/samples/io/: CMakeLists.txt
source_code/dv-processing-rel_1.7/tests/camera/: CMakeLists.txt  camera-distortion.cpp  camera-geometry.cpp
source_code/dv-processing-rel_1.7/tests/cluster/: CMakeLists.txt
source_code/dv-processing-rel_1.7/tests/core/: basic-syntax.cpp  event-colors.cpp  stream-slicer.cpp
source_code/dv-processing-rel_1.7/tests/data/: cstring.cpp  depth-event.cpp  frame.cpp  pose.cpp
source_code/dv-processing-rel_1.7/tests/depth/: semi-dense-stereo-matcher.cpp
source_code/dv-processing-rel_1.7/tests/features/: arc-corner-detector.cpp  feature-tracks.cpp  mean-shift-tracker.cpp
source_code/dv-processing-rel_1.7/tests/io/: camera-capture.cpp  mono-camera-recording.cpp  stereo-camera-writer.cpp
source_code/dv-processing-rel_1.7/tests/kinematics/: motion-compensator.cpp  transformation.cpp
(+626 files in other folders)
