[build-system]
requires = [
    "setuptools",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python -c \"import dv_processing; print(dv_processing.__version__);\""

[tool.cibuildwheel.linux]
skip = "*musllinux*"
manylinux-x86_64-image = "registry.gitlab.com/inivation/infra/docker-files/manylinux2014_x86_64_ini:latest"
manylinux-i686-image = "registry.gitlab.com/inivation/infra/docker-files/manylinux2014_i686_ini:latest"
manylinux-aarch64-image = "registry.gitlab.com/inivation/infra/docker-files/manylinux2014_aarch64_ini:latest"
manylinux-pypy_x86_64-image = "registry.gitlab.com/inivation/infra/docker-files/manylinux2014_x86_64_ini:latest"
manylinux-pypy_i686-image = "registry.gitlab.com/inivation/infra/docker-files/manylinux2014_i686_ini:latest"
manylinux-pypy_aarch64-image = "registry.gitlab.com/inivation/infra/docker-files/manylinux2014_aarch64_ini:latest"

[tool.cibuildwheel.macos]
skip = "pp*"

[tool.cibuildwheel.windows]
skip = ["cp36-*", "cp37-*", "pp*"]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
