FILE(GLOB SRCFILES */*.cpp)

SET(i 0)
SET(DOC_TARGETS "")
FOREACH(SRCFILE ${SRCFILES})
	GET_FILENAME_COMPONENT(DIRECTORY_PATH ${SRCFILE} DIRECTORY)
	GET_FILENAME_COMPONENT(DIRNAME ${DIRECTORY_PATH} NAME)
	GET_FILENAME_COMPONENT(SAMPLE_NAME ${SRCFILE} NAME)

	SET(CURRENT_TARGET_NAME docs-sample-${DIRNAME}-${SAMPLE_NAME}-${i})
	MATH(EXPR i "${i} + 1")
	LIST(APPEND DOC_TARGETS ${CURRENT_TARGET_NAME})

	ADD_EXECUTABLE(${CURRENT_TARGET_NAME} ${SRCFILE})
	TARGET_LINK_LIBRARIES(${CURRENT_TARGET_NAME} PRIVATE dv::processing)

	# Make sure we don't use any deprecated code in the samples
	TARGET_COMPILE_OPTIONS(${CURRENT_TARGET_NAME} PRIVATE "-Werror=deprecated-declarations")
ENDFOREACH()

# Create a target that builds all sample codes
ADD_CUSTOM_TARGET(all-docs-samples)
ADD_DEPENDENCIES(all-docs-samples ${DOC_TARGETS})
